tests/ui/fail-noincludefound.stderr
error: No such file or directory (os error 2) "$DIR/target/tests/lazylink/not exists"
 --> $DIR/fail-noincludefound.rs:1:27
  |
1 | #[lazylink::lazylink("c", include="not exists")]
  |                           ^^^^^^^
